--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
-    "@mui/x-data-grid": "^6.0.0",
+    "@mui/x-data-grid": "^6.0.2",
+    "@mui/x-data-grid-generator": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
