--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^6.0.2",
     "@mui/x-data-grid-generator": "^6.0.2",
+    "@mui/x-date-pickers": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
+    "react-calendar": "^4.0.0",
     "react-countup": "^6.4.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
